fix: 解锁乐豆任务判断

--- a/src/pages/mine/index.less
+++ b/src/pages/mine/index.less
@@ -277,8 +277,8 @@
   .use-list {
     margin-top: 20px;
     display: flex;
-    // justify-content: space-between;
-    flex-wrap: wrap;
+    justify-content: space-between;
+    // flex-wrap: wrap;
     border-radius: 14px;
     background: linear-gradient(180deg, #f0fffe, #ffffff 37%, #feffff 99%, #ffffff);
 
