fix: 修复浏览商品+1

--- a/src/pages/mine/index.less
+++ b/src/pages/mine/index.less
@@ -32,6 +32,7 @@
     right: 24px;
     display: flex;
     justify-content: flex-end;
+    top: 10px;
     // margin-right: 14px;
     .btn {
       .img1 {
@@ -51,7 +52,7 @@
     }
   }
   .user {
-    margin-top: 10px;
+    padding-top: 10px;
     display: flex;
     align-items: center;
     .User__Img {
