--- a/src/minePackage/pages/browse/index.less
+++ b/src/minePackage/pages/browse/index.less
@@ -1,15 +1,17 @@
 .MyBrowsePage__root {
+  height: 100%;
   background: #f3f4f4;
   padding-bottom: constant(safe-area-inset-bottom); /* 兼容 iOS < 11.2 */
   padding-bottom: env(safe-area-inset-bottom); /* 兼容 iOS >= 11.2 */
   .browse-scroll {
     width: 100%;
+    height: 100vh;
   }
   .browseView {
     padding: 0 30px;
     padding-bottom: 50px;
     .item {
-      margin: 20px 0px 10px;
+      padding: 20px 0px 10px;
       .date {
         color: #999;
         font-size: 24px;
