--- a/src/components/GoodsItem/index.less
+++ b/src/components/GoodsItem/index.less
@@ -52,10 +52,8 @@
         margin-bottom: 26px;
         padding-top: 15px;
         overflow: hidden;
-        text-overflow: ellipsis;
-        display: -webkit-box;
-        -webkit-box-orient: vertical;
-        -webkit-line-clamp: 1;
+        text-overflow: ellipsis; //文本溢出显示省略号
+        white-space: nowrap; //文本不会换行
       }
       .money {
         font-size: 30px;
