--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -87,7 +87,7 @@
       align-items: center;
       padding: 16px 25px;
       // opacity: 0.9;
-      background: rgba(230, 230, 230, 0.9);
+      background: rgba(230, 230, 230, 0.5);
       border-radius: 50px;
       // box-shadow: 7px 7px 29px 1px rgba(218, 218, 218, 0.39);
       .search {
@@ -98,7 +98,7 @@
       Input {
         .input-placeholder {
           font-size: 24px;
-          color: #f4fffe;
+          color: #fff;
         }
       }
     }
