fix: 点赞列表,分享列表ui问题

--- a/src/minePackage/pages/browse/index.less
+++ b/src/minePackage/pages/browse/index.less
@@ -37,23 +37,34 @@
           text-align: center;
           position: absolute;
         }
-        .jump {
+        .jumpView {
           width: 124px;
           height: 128px;
           border-radius: 18px;
           margin-right: 21px;
+          overflow: hidden;
+          .jump {
+            width: 124px;
+            height: 128px;
+          }
         }
+
         .shopInfo {
           display: flex;
           flex-direction: row;
           margin-top: 10px;
           align-items: center;
-          .shopHeadImg {
+          .shopHead {
             width: 32px;
             height: 32px;
             border-radius: 32px;
             overflow: hidden;
+            .shopHeadImg {
+              width: 32px;
+              height: 32px;
+            }
           }
+
           .shopName {
             margin-left: 8px;
             font-size: 22px;
