--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -2,7 +2,7 @@
   background: #f3f4f4;
   height: 100vh;
   .top-s {
-    height: 558px;
+    height: 616px;
     .item {
       Image {
         width: 100%;
@@ -24,7 +24,7 @@
   .banner {
     position: relative;
     box-shadow: 3px -8px 72px 20px #47a1a1 inset;
-    height: 556px;
+    height: 616px;
   }
   .mask {
     position: absolute;
@@ -114,7 +114,7 @@
     // box-shadow: -3px -2px 20px 20px #f3f4f4;
     position: relative;
     padding-bottom: 80px;
-    margin-top: -120px;
+    margin-top: -140px;
     z-index: 88;
   }
   .home-body {
@@ -151,6 +151,8 @@
         margin-right: 8px;
         width: 278px;
         height: 310px;
+        overflow: hidden;
+
         .first {
           width: 100%;
           height: 100%;
@@ -174,9 +176,12 @@
         flex: 1;
         display: flex;
         flex-direction: column;
+
         .right-top {
           width: 380px;
           height: 140px;
+          border-radius: 18px;
+          overflow: hidden;
           .second {
             width: 100%;
             height: 100%;
@@ -202,6 +207,8 @@
         .right-bottom {
           width: 380px;
           height: 160px;
+          border-radius: 18px;
+          overflow: hidden;
           .third {
             width: 100%;
             height: 100%;
@@ -275,7 +282,7 @@
 .basic-swiped {
   position: absolute;
   left: 130px;
-  bottom: 120px;
+  bottom: 140px;
 }
 .taroify-swiper__indicator--active {
   background: #64d0c8;
