--- a/src/minePackage/pages/systemsNotice/index.less
+++ b/src/minePackage/pages/systemsNotice/index.less
@@ -7,7 +7,7 @@
     width: 100%;
   }
   .msg_list {
-    padding: 0 30px;
+    padding: 0 30px 100px 30px;
     .unreadMsgView {
       display: flex;
       flex-direction: row;
